alignment fixes

--- a/src/Components/Team/Team.scss
+++ b/src/Components/Team/Team.scss
@@ -1,9 +1,10 @@
-.container{
+.janta{
   padding-top: 10rem;
   .alig{
-    display:flex;
-    flex-direction:row;
+    display: flex;
+    flex-direction: row;
     justify-content: space-evenly;
+    flex-wrap: wrap;
     
   }
 }
@@ -18,6 +19,9 @@
   width:17rem;
   position: relative;
   overflow: hidden;
+  box-shadow: 0px 8px 19px rgba(0, 0, 0, 0.25);
+  border-radius:5px;
+  margin: 2rem;
   img{
     width:10rem;
     border-radius: 50%;
